--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "autoprefixer": "^10.4.19",
     "localforage": "^1.10.0",
+    "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-quill": "^2.0.0",
@@ -14,8 +16,7 @@
   },
   "overrides": {
     "@svgr/webpack": "^8.0.1",
-    "@adobe/css-tools": "^4.3.1",
-    "postcss": "^8.4.31"
+    "@adobe/css-tools": "^4.3.1"
   },
   "scripts": {
     "start": "BROWSER=none WDS_SOCKET_PORT=0 vite",
@@ -42,8 +43,10 @@
     ]
   },
   "devDependencies": {
+    "@types/node": "^20.12.4",
     "@vitejs/plugin-react": "^4.1.1",
     "jsdom": "^22.1.0",
+    "tailwindcss": "^3.4.3",
     "vite": "^4.5.2",
     "vitest": "^0.34.6"
   }
